connect hikey configurations with relay to reboot board and burn images
Signed-off-by: Leo Yan <leo.yan@linaro.org>

--- a/examples/hikey_boot_bisect.conf
+++ b/examples/hikey_boot_bisect.conf
@@ -10,11 +10,12 @@
 # move the test cases to other locations or to other machines.
 #
 MACHINE = Hikey
-CONSOLE = cat /home/leoy/Documents/Work_disk/tools/x86/ktest/hikey-cat
+#CONSOLE = cat /home/leoy/Documents/Work_disk/tools/x86/ktest/hikey-cat
+CONSOLE = stty -F /dev/ttyUSB0 115200 parodd -icrnl 2>/dev/null; cat /dev/ttyUSB0
 THIS_DIR := /home/leoy/Documents/Work_disk/tools/x86/ktest/
 CONFIG_DIR := ${THIS_DIR}/configs/${MACHINE}
 OUTPUT_DIR = ${THIS_DIR}/build/Hikey
-BUILD_DIR = /home/leoy/Work/reference/opensource/linux
+BUILD_DIR = /home/leoy/Work/reference/opensource/linux-upstream
 
 LOG_FILE = ${OUTPUT_DIR}/Hikey.log
 CLEAR_LOG = 1
@@ -27,7 +28,7 @@ SCP_TO_TARGET = echo "don't do scp"
 SSH_USER = root
 
 REBOOT_TYPE = script
-POWER_CYCLE = echo use the thumb Luke; aplay /usr/share/sounds/purple/send.wav; sleep 10
+POWER_CYCLE = echo "relay5 on" > /dev/ttyACM0; sleep 1; echo "relay1 on" > /dev/ttyACM0; sleep 1; echo "relay1 off" > /dev/ttyACM0
 REBOOT = ${THIS_DIR}/examples/hikey-reboot ${SSH_USER}@${MACHINE}
 
 BUILD_TARGET = arch/arm64/boot/Image
@@ -39,10 +40,10 @@ REBOOT_SUCCESS_LINE = login:
 
 TIMEOUT = 120
 SLEEP_TIME = 40
-IGNORE_ERRORS = 1
+#IGNORE_ERRORS = 1
 
-REBOOT_ON_SUCCESS = 1
-REBOOT_ON_ERROR = 1
+REBOOT_ON_SUCCESS = 0
+REBOOT_ON_ERROR = 0
 POWEROFF_ON_ERROR = 0
 POWEROFF_ON_SUCCESS = 0
 
@@ -50,9 +51,9 @@ TEST_START
 MIN_CONFIG = ${THIS_DIR}/configs/Hikey/config-min
 TEST_TYPE = bisect
 BISECT_TYPE = boot
-BISECT_GOOD = c82be9d2244aacea9851c86f4fb74694c99cd874
-BISECT_BAD = 7269a2e6e3ba5ca73a8f58324acfb748b15579b1
-CHECKOUT = 7269a2e6e3ba5ca73a8f58324acfb748b15579b1
-POST_INSTALL = echo Install Hikey image manually!; aplay /usr/share/sounds/purple/send.wav; sleep 20
+BISECT_GOOD = aaffeba6dbd12599cf14edf93580ed8c4a8a6b55
+BISECT_BAD = 71b00ac2dc85016de7b08cd0d8836eaae4d18824
+CHECKOUT = 71b00ac2dc85016de7b08cd0d8836eaae4d18824
+POST_INSTALL = cd /home/leoy/Work/hisi/boot/l-loader/hikey_mainline; sh flash-all-own.sh; cd -
 BUILD_NOCLEAN = 1
 BUILD_OPTIONS = -j8 Image dtbs
