--- a/examples/hikey_config_bisect.conf
+++ b/examples/hikey_config_bisect.conf
@@ -15,7 +15,7 @@ CONSOLE = stty -F /dev/ttyUSB0 115200 parodd -icrnl 2>/dev/null; cat /dev/ttyUSB
 THIS_DIR := /home/leoy/Documents/Work_disk/tools/x86/ktest/
 CONFIG_DIR := ${THIS_DIR}/configs/${MACHINE}
 OUTPUT_DIR = ${THIS_DIR}/build/Hikey
-BUILD_DIR = /home/leoy/Work/reference/opensource/linux
+BUILD_DIR = /home/leoy/Work/reference/opensource/linux-upstream
 
 LOG_FILE = ${OUTPUT_DIR}/Hikey.log
 CLEAR_LOG = 1
@@ -28,7 +28,7 @@ SCP_TO_TARGET = echo "don't do scp"
 SSH_USER = root
 
 REBOOT_TYPE = script
-POWER_CYCLE = echo use the thumb Luke; aplay /usr/share/sounds/purple/send.wav; sleep 10
+POWER_CYCLE = echo "relay5 on" > /dev/ttyACM0; sleep 1; echo "relay1 on" > /dev/ttyACM0; sleep 1; echo "relay1 off" > /dev/ttyACM0
 REBOOT = ${THIS_DIR}/examples/hikey-reboot ${SSH_USER}@${MACHINE}
 
 BUILD_TARGET = arch/arm64/boot/Image
@@ -52,6 +52,6 @@ TEST_TYPE = config_bisect
 CONFIG_BISECT_TYPE = boot
 CONFIG_BISECT = ${THIS_DIR}/config-bad
 CONFIG_BISECT_GOOD = ${THIS_DIR}/config-good
-POST_INSTALL = echo Install Hikey image manually!; aplay /usr/share/sounds/purple/send.wav; sleep 20
+POST_INSTALL = cd /home/leoy/Work/hisi/boot/l-loader/hikey_mainline; sh flash-all-own.sh; cd -
 BUILD_NOCLEAN = 1
 BUILD_OPTIONS = -j8 Image dtbs
